[package]
name = "ringer"
version = "0.1.0"
authors = ["maytrayzor666 <cyberjesus@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "*"
linereader = "*"
bytes = "*"
tokio = { version = "*", features = ["rt-core", "rt-threaded", "net", "tcp", "macros", "time", "io-util"] }
rand = "*"
colored = "*"