[package]
name = "octo-spoon"
version = "2.2.8
authors = ["gamer girl or something"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "*"
linereader = "*"
bytes = "*"
tokio = { version = "*", features = ["rt-core", "rt-threaded", "net", "tcp", "macros", "time", "io-util"] }
rand = "*"
colored = "*"
